# speech-service

./: CMakeLists.txt  README.md  config  ndk.mk  vsys.mk
demo/: infinite-voice.cpp  infinite-voice.h  main.cpp
src/: defs.h  event-handler.cpp  event-handler.h  keepalive.cpp  keepalive.h  main.cpp  speech-service.cpp  speech-service.h
